K1J-356: Update to java 21, gradle 8.10.2 and remove gradle-intyg-plugin. (#859)
Co-authored-by: Mikael Heglind <mikael.heglind@soprasteria.com>